--- a/TSPSolver/Base.lproj/Main.storyboard
+++ b/TSPSolver/Base.lproj/Main.storyboard
@@ -70,6 +70,9 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="solveButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pEw-qa-vqr"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
