--- a/TSPSolver/Base.lproj/Main.storyboard
+++ b/TSPSolver/Base.lproj/Main.storyboard
@@ -16,47 +16,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DTB-Xh-ohU">
+                                <rect key="frame" x="16" y="18" width="730" height="730"/>
+                                <color key="backgroundColor" white="0.94891036184210531" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dvi-eD-dzd">
                                 <rect key="frame" x="774" y="0.0" width="250" height="768"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="p5T-Em-yuE">
-                                        <rect key="frame" x="0.0" y="0.0" width="250" height="650"/>
+                                        <rect key="frame" x="0.0" y="8" width="250" height="397"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <prototypes>
-                                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="aQ3-xY-tU4">
-                                                <rect key="frame" x="0.0" y="22" width="250" height="60"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aQ3-xY-tU4" id="ICP-Iu-vQT">
-                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="59.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dk0-ho-kDs">
-                                                            <rect key="frame" x="8" y="15" width="30" height="30"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="30" id="kSt-0k-50W"/>
-                                                                <constraint firstAttribute="width" constant="30" id="sMe-4z-yjZ"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ujv-3M-B4s">
-                                                            <rect key="frame" x="46" y="8" width="196" height="44"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="43.5" id="txo-yh-Z48"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="ujv-3M-B4s" firstAttribute="top" secondItem="ICP-Iu-vQT" secondAttribute="top" constant="8" id="A1h-Fp-Peb"/>
-                                                        <constraint firstItem="ujv-3M-B4s" firstAttribute="leading" secondItem="dk0-ho-kDs" secondAttribute="trailing" constant="8" id="DhS-CB-VmB"/>
-                                                        <constraint firstAttribute="trailing" secondItem="ujv-3M-B4s" secondAttribute="trailing" constant="8" id="G1u-fb-QRa"/>
-                                                        <constraint firstItem="dk0-ho-kDs" firstAttribute="leading" secondItem="ICP-Iu-vQT" secondAttribute="leading" constant="8" id="Iu8-OE-ABl"/>
-                                                        <constraint firstItem="dk0-ho-kDs" firstAttribute="top" secondItem="ICP-Iu-vQT" secondAttribute="top" constant="15" id="g7X-sG-tbd"/>
-                                                    </constraints>
-                                                </tableViewCellContentView>
-                                            </tableViewCell>
-                                        </prototypes>
                                         <connections>
                                             <outlet property="dataSource" destination="BYZ-38-t0r" id="sPA-59-2S8"/>
                                             <outlet property="delegate" destination="BYZ-38-t0r" id="YIc-9x-CiE"/>
@@ -74,12 +43,26 @@
                                             <action selector="solveButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pEw-qa-vqr"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DynamicProgramming" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KtW-7B-odI">
+                                        <rect key="frame" x="8" y="431" width="234" height="42"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qie-yg-Rxv">
+                                        <rect key="frame" x="40" y="549" width="171" height="38"/>
+                                        <color key="backgroundColor" red="0.0" green="0.25098040699958801" blue="0.50196081399917603" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <state key="normal" title="Select Solver">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="selectSolverButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UhV-fS-hsh"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DTB-Xh-ohU">
-                                <rect key="frame" x="16" y="18" width="730" height="730"/>
-                                <color key="backgroundColor" white="0.94891036184210531" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -87,6 +70,7 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
                         <outlet property="mainView" destination="DTB-Xh-ohU" id="GRD-Xb-21f"/>
+                        <outlet property="solverTypeLabel" destination="KtW-7B-odI" id="p4f-DE-8aI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
